--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/lucasschmidt015/TwitterBackend#readme",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.569.0",
     "@prisma/client": "^5.13.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2"
   },
