--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
   },
   "homepage": "https://github.com/lucasschmidt015/TwitterBackend#readme",
   "dependencies": {
-    "@aws-sdk/client-ses": "^3.569.0",
     "@prisma/client": "^5.13.0",
-    "aws-sdk": "^2.1626.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
